-fixed: scrollbars

--- a/src/components/pomodore/Pomodore.css
+++ b/src/components/pomodore/Pomodore.css
@@ -1,7 +1,6 @@
 .PomodoreContainer {
   width: 100%;
-  height: 10%;
-  min-height: 80px;
+  min-height: 50px;
   background-color: #0077c2;
   color: #fafafa;
   display: flex;
