--- a/src/components/task/Task.css
+++ b/src/components/task/Task.css
@@ -1,8 +1,15 @@
 .TaskContainer {
   width: 100%;
-  height: 90%;
+  height: 100%;
   min-width: 200px;
   min-height: 400px;
+  display: flex;
+  flex-flow: column;
+}
+
+.TaskListContainer {
+  height: 100%;
+  overflow: auto;
 }
 
 .TaskHeadlineContainer {
